# subgit-sync

./: .gitignore  Cargo.toml  README.md  notes.md
declarative/: Cargo.toml
declarative/src/: executor.rs  git.rs  harness.rs  lib.rs  model.rs  tree.rs  util.rs
declarative/tests/: branch_confusion.rs  import.rs
src/: action.rs  cli.rs  control.rs  fs.rs  git.rs  lib.rs  logging.rs  main.rs  util.rs
src/model/: copier.rs  fs_util.rs  git.rs  map.rs  mod.rs  settings.rs
src/tests/: advanced.rs  basic_sync.rs  mod.rs  more.rs  single_branch_basic.rs  test_util.rs
subgit-sync/: Cargo.toml
subgit-sync/src/: action.rs  cli.rs  fs.rs  git.rs  lib.rs  main.rs  util.rs
subgit-sync/src/model/: copier.rs  map.rs  mod.rs  settings.rs
subgit-sync/tests/: basic.rs  import.rs  problems.rs  push_from_subgit.rs  push_from_upstream.rs  push_mechanics.rs  ref_filter.rs
test-harness/: Cargo.toml  setup-daemon.sh
test-harness/src/: lib.rs
test-harness/src/harness/: mod.rs
test-harness/src/util/: mod.rs
test-harness/tests/: basic.rs  import.rs  problems.rs  push_from_subgit.rs  push_from_upstream.rs  push_mechanics.rs  ref_filter.rs
test_files/: multiple-git-hooks.sh
tests/: basic.rs  import.rs  problems.rs  push_from_subgit.rs  push_from_upstream.rs  push_mechanics.rs  ref_filter.rs  subgit.rs  upstream.rs
tests/harness/: mod.rs
tests/util/: mod.rs
