[package]
name = "subgit-rs"
version = "0.1.0"
authors = ["Sam Sieber <ssieber@simplifile.com>"]

[dependencies]
git2 = "0.7"
simplelog = "0.5.0"
hex = "0.3.2"
fs2 = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.2"
maplit = "1.0.1"
nix = "0.10"
libc = "0.2"
log-panics = "2.0.0"

[dependencies.log]
version = "0.4"
features = ["serde"]