[package]
name = "subgit-sync"
version = "0.3.2"
authors = ["Sam Sieber <swsieber@gmail.com>"]
edition = "2018"

[dependencies]
simplelog = "0.5.0"
hex = "0.3.2"
fs2 = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.2"
maplit = "1.0.1"
nix = "0.10"
libc = "0.2"
log-panics = "2.0.0"

chrono = { version = "0.4" }
rusqlite = { version = "0.15.0", features = ["bundled", "chrono"]}

failure = "*"

[dependencies.log]
version = "0.4"
features = ["serde"]

[dependencies.git2]
version = "0.7"
default-features = false
